--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "python-utilities"]
-	path = python-utilities
+[submodule "python_utilities"]
+	path = python_utilities
 	url = https://github.com/helindustries/hi-python-utilities.git
